--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,20 @@
+header{
+    background-color: aqua;
+}
 
+body{
+    background: url(../assets/images/bg.jpg) aqua;
+    background-repeat: no-repeat;
+    max-width: 100%;
+    width: 100%;
+    height: 35rem;
+}
+
+section{
+    background-color: white;
+}
+
+#info{
+    display: flex;
+    justify-content: center;
+}
