--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,84 @@
-header{
-    background-color: aqua;
+*{
+    font-family: sans-serif;    
 }
 
 body{
-    background: url(../assets/images/bg.jpg) aqua;
+    background: url(../assets/images/bg.jpg) #1DA1F2;
     background-repeat: no-repeat;
-    max-width: 100%;
-    width: 100%;
-    height: 35rem;
+    background-size: cover;
+    max-width: 100%;   
+    margin: 0px; 
 }
 
-section{
-    background-color: white;
+header{
+    background-color: #1DA1F2;
+    color: white;
+    margin: 0px 0px 2rem;
+    padding: 1rem;
+    text-align: center;
+}
+
+header h1{
+    margin: 0px;
+}
+
+main{
+    color: #657786;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #info{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    width: 90%;
+}
+
+#info section{
+    background-color: white;  
+    width: 50%;
+    border: 1px solid white;
+    border-radius: 1%;
+    box-shadow: 2px 2px #888888;
+    padding: 2rem;
+    margin: 1rem;
+}
+
+
+#tweet-area{
+    width: 98%;
+    height: 50%;
+    color: #657786;
+    font-weight: bold;
+    font-size: 14px;
+    border: 0px;
+    border-bottom: 2px solid #888888;
+    resize: none;
+}
+
+button{
+    background-color: #1DA1F2;
+    color: white;
+    font-size: 1rem;
+    font-weight: bold;
+    border: none;
+    padding: 0.5rem 1rem;
+    margin-top: 1rem;
+    min-width: 50px;
+    min-height: 50px;
+}
+
+#tweets{
+    width: 90%;
+    margin: 1rem;
+}
+
+#tweets p{
+    background-color: white;  
+    padding: 1rem;
+    margin: 1rem;  
+    border: 1px solid white;
+    border-radius: 1%;
+    box-shadow: 2px 2px #888888; 
 }
