--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,6 @@ main{
     margin: 1rem;
 }
 
-
 #tweet-area{
     width: 98%;
     height: 50%;
@@ -57,7 +56,18 @@ main{
     resize: none;
 }
 
-button{
+#tweet div{
+    display: flex;
+    justify-content: space-between;
+}
+
+#counter{
+    font-weight: 600;
+    font-size: 1rem;
+    margin: 0.5rem;
+}
+
+#tweet-button{
     background-color: #1DA1F2;
     color: white;
     font-size: 1rem;
@@ -67,6 +77,8 @@ button{
     margin-top: 1rem;
     min-width: 50px;
     min-height: 50px;
+    cursor: pointer;
+    visibility: hidden;
 }
 
 #tweets{
