--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,7 @@ main{
     display: flex;
     justify-content: space-around;
     width: 90%;
+    align-items: flex-start;
 }
 
 #info section{
@@ -45,15 +46,23 @@ main{
     margin: 1rem;
 }
 
+#tweet{
+    align-self: stretch;
+}
+
 #tweet-area{
-    width: 98%;
-    height: 50%;
     color: #657786;
     font-weight: bold;
     font-size: 14px;
     border: 0px;
-    border-bottom: 2px solid #888888;
     resize: none;
+    outline: none;
+    overflow: hidden;
+    box-sizing: border-box;
+}
+
+hr{
+    border: 1px solid #888888;
 }
 
 #tweet div{
