--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body{
     background: url(../assets/images/bg.jpg) #1DA1F2;
     background-repeat: no-repeat;
     background-size: cover;
-    max-width: 100%;   
+    width: 100%;   
     margin: 0px; 
 }
 
@@ -14,16 +14,16 @@ header{
     background-color: #1DA1F2;
     color: white;
     margin: 0px 0px 2rem;
-    padding: 1rem;
+    padding: 0.8rem;
     text-align: center;
 }
 
-header h1{
+header h2{
     margin: 0px;
 }
 
 main{
-    color: #657786;
+    color: #4D5B66;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -42,7 +42,7 @@ main{
     border: 1px solid white;
     border-radius: 1%;
     box-shadow: 2px 2px #888888;
-    padding: 2rem;
+    padding: 1rem 2rem;
     margin: 1rem;
 }
 
@@ -51,7 +51,7 @@ main{
 }
 
 #tweet-area{
-    color: #657786;
+    color: #4D5B66;
     font-weight: bold;
     font-size: 14px;
     border: 0px;
@@ -77,17 +77,16 @@ hr{
 }
 
 #tweet-button{
-    background-color: #1DA1F2;
+    background-color: #BFAFAC;
     color: white;
-    font-size: 1rem;
+    font-size: 0.9rem;
     font-weight: bold;
     border: none;
-    padding: 0.5rem 1rem;
+    padding: 0rem 1rem;
     margin-top: 1rem;
     min-width: 50px;
     min-height: 50px;
-    cursor: pointer;
-    visibility: hidden;
+    cursor: auto;
 }
 
 #tweets{
@@ -101,5 +100,6 @@ hr{
     margin: 1rem;  
     border: 1px solid white;
     border-radius: 1%;
-    box-shadow: 2px 2px #888888; 
+    box-shadow: 2px 2px #888888;
+    font-weight: bold; 
 }
